--- a/SpringSecurity_03_customLoginForm/.settings/org.eclipse.wst.common.component
+++ b/SpringSecurity_03_customLoginForm/.settings/org.eclipse.wst.common.component
@@ -4,6 +4,6 @@
         <wb-resource deploy-path="/" source-path="/src/main/webapp" tag="defaultRootSource"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/java"/>
         <property name="java-output-path" value="/SpringSecurity/target/classes"/>
-        <property name="context-root" value="SpringSecurity_customLogin"/>
+        <property name="context-root" value="SpringSecurity"/>
     </wb-module>
 </project-modules>
