--- a/5_CRUD_SpringBoot_Thymeleaf/src/main/resources/templates/employees/employee-form.html
+++ b/5_CRUD_SpringBoot_Thymeleaf/src/main/resources/templates/employees/employee-form.html
@@ -15,6 +15,9 @@
 				th:action="@{/employees/save}"
 				th:object="${employee}"
 				method="POST">
+				
+			<input type="hidden" th:field="*{id}" />
+				
 			<input type="text" th:field="*{firstName}" class="form-control mb-4 col-4" placeholder="First Name">
 			<input type="text" th:field="*{lastName}" class="form-control mb-4 col-4" placeholder="Last Name">
 			<input type="text" th:field="*{email}" class="form-control mb-4 col-4" placeholder="Email">
