--- a/5_CRUD_SpringBoot_Thymeleaf/src/main/resources/templates/employees/list-employees.html
+++ b/5_CRUD_SpringBoot_Thymeleaf/src/main/resources/templates/employees/list-employees.html
@@ -11,15 +11,17 @@
 	<div class="container">
 		<h3>Employees</h3>
 		<hr>
-		
-		<a th:href="@{/employees/showFormForAdd}" class="btn btn-primary btn-sm mb-3">Add Employee</a>
-				
+
+		<a th:href="@{/employees/showFormForAdd}"
+			class="btn btn-primary btn-sm mb-3">Add Employee</a>
+
 		<table class="table table-bordered table-striped">
 			<thead class="thead-dark">
 				<tr>
 					<th>First Name</th>
 					<th>Last Name</th>
 					<th>Email</th>
+					<th colspan="2">Action</th>
 				</tr>
 			</thead>
 			<tbody>
@@ -27,6 +29,13 @@
 					<td th:text="${tempEmployee.firstName}"></td>
 					<td th:text="${tempEmployee.lastName}"></td>
 					<td th:text="${tempEmployee.email}"></td>
+					<td><a
+						th:href="@{/employees/showFormForUpdate(employeeId=${tempEmployee.id})}"
+						class="btn btn-info btn-sm">Update</a></td>
+					<td><a
+						th:href="@{/employees/delete(employeeId=${tempEmployee.id})}"
+						class="btn btn-danger btn-sm"
+						onclick="if(!(confirm('Are you sure you want delete this employee?'))) return false">Delete</a></td>
 				</tr>
 			</tbody>
 		</table>
